--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "emoji-mart": "^3.0.1",
     "firebase": "^9.6.8",
     "next": "12.1.0",
+    "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.49.9"
