--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "next-auth": "^4.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.9"
+    "react-firebase-hooks": "^5.0.3",
+    "react-moment": "^1.1.1",
+    "sass": "^1.49.9",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.8",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.23"
   }
 }
