--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "17.0.2",
     "react-firebase-hooks": "^5.0.3",
     "react-moment": "^1.1.1",
+    "recoil": "^0.6.1",
     "sass": "^1.49.9",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
